--- a/ros_ws/src/crazyswarm/launch/crazyflies.yaml
+++ b/ros_ws/src/crazyswarm/launch/crazyflies.yaml
@@ -1,5 +1,22 @@
 crazyflies:
-- channel: 100
+- channel: 120
   id: 1
-  initialPosition: [1.5, 1.5, 0.0]
-  type: medium
+  initialPosition:
+  - 0.0
+  - 0.0
+  - 0.0
+  type: default
+- channel: 110
+  id: 2
+  initialPosition:
+  - 0.5
+  - 0.0
+  - 0.0
+  type: default
+- channel: 100
+  id: 3
+  initialPosition:
+  - -0.5
+  - 0.0
+  - 0.0
+  type: default
