--- a/ros_ws/src/crazyswarm/launch/allCrazyflies.yaml
+++ b/ros_ws/src/crazyswarm/launch/allCrazyflies.yaml
@@ -1,9 +1,13 @@
 crazyflies:
   - id: 1
+    channel: 120
+    initialPosition: [0.0, 0.0, 0.0]
+    type: default
+  - id: 2
+    channel: 110
+    initialPosition: [0.5, 0.0, 0.0]
+    type: default
+  - id: 3
     channel: 100
-    initialPosition: [1.5, 1.5, 0.0]
-    type: medium
-  - id: 40
-    channel: 100
-    initialPosition: [-1.0, -0.5, 0.0]
+    initialPosition: [-0.5, 0.0, 0.0]
     type: default
