--- a/ros_ws/src/crazyswarm/launch/crazyflies.yaml
+++ b/ros_ws/src/crazyswarm/launch/crazyflies.yaml
@@ -6,17 +6,38 @@ crazyflies:
   - 0.0
   - 0.0
   type: default
-- channel: 110
+- channel: 120
   id: 2
   initialPosition:
   - 0.5
   - 0.0
   - 0.0
   type: default
-- channel: 100
+- channel: 120
   id: 3
   initialPosition:
-  - -0.5
+  - 0.5
+  - 1.0
   - 0.0
+  type: default
+- channel: 120
+  id: 4
+  initialPosition:
+  - -1.0
+  - 1.0
+  - 0.0
+  type: default
+- channel: 120
+  id: 5
+  initialPosition:
+  - -1.0
+  - -1.0
+  - 0.0
+  type: default
+- channel: 120
+  id: 6
+  initialPosition:
+  - 1.0
+  - -1.0
   - 0.0
   type: default
