--- a/ros_ws/src/crazyswarm/launch/allCrazyflies.yaml
+++ b/ros_ws/src/crazyswarm/launch/allCrazyflies.yaml
@@ -1,17 +1,21 @@
 crazyflies:
   - id: 1
-    channel: 120
+    channel: 82
     initialPosition: [0.0, 0.0, 0.0]
     type: default
-  # - id: 2
-  #   channel: 110
-  #   initialPosition: [0.5, 0.0, 0.0]
-  #   type: default
-  # - id: 3
-  #   channel: 100
-  #   initialPosition: [-0.5, 0.0, 0.0]
-  #   type: default
-  # - id: 4
-  #   channel: 90
-  #   initialPosition: [0.0, 0.5, 0.0]
-  #   type: default
+  - id: 4
+    channel: 82
+    initialPosition: [0.0, 1.0, 0.0]
+    type: default
+  - id: 16
+    channel: 82
+    initialPosition: [1.0, 0.0, 0.0]
+    type: default
+  - id: 6
+    channel: 82
+    initialPosition: [-1.0, 1.0, 0.0]
+    type: default
+  - id: 5
+    channel: 86
+    initialPosition: [-1.0, 0.0, 0.0]
+    type: default
